--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="header">
-    oi
+    <img class="trybewarts-header-logo" src="./images/trybewarts-header-logo.svg" alt="trybewarts logo">
   </header>
   <script src="script.js"></script>
 </body>
