--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
   <header class="header">
     <img class="trybewarts-header-logo" src="./images/trybewarts-header-logo.svg" alt="trybewarts logo">
+    <form action="" class="trybewarts-login">
+      <input type="email" name="email" placeholder="Email" id="email-login">
+      <input type="password" name="password" placeholder="Senha" id="password-login">
+      <button id="login" type="submit">Entrar</button>
+    </form>
   </header>
   <script src="script.js"></script>
 </body>
