--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       <button id="login" type="submit">Entrar</button>
     </form>
   </header>
+  <main>
+    <form id="evaluation-form">
+      
+    </form>
+  </main>
   <script src="script.js"></script>
 </body>
 </html>
