--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
   </header>
   <main>
     <form id="evaluation-form">
-      <input type="text" id="input-name" placeholder="Nome">
-      <input type="text" id="input-lastname" placeholder="Sobrenome">
+      <div id="nomeSobrenome">
+        <input type="text" id="input-name" placeholder="Nome">
+        <input type="text" id="input-lastname" placeholder="Sobrenome">
+      </div>
       <input type="email" id="input-email" placeholder="Email">
 
       <select id="house">
