--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
           <option id="pytherina-house" value="Pytherina">Pytherina</option>
         </select>
       </div>
+      <label id="label-family">Qual sua família?</label>
+        <div id="familia">
+            <input type="radio" name ='family' value="Frontend">Frontend
+            <input type="radio" name ='family' value="Backend">Backend
+            <input type="radio" name ='family' value="FullStack">FullStack
+        </div>
+      
     </form>
     <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="trybewarts colored">
   </main>
