--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         </select>
       </div>
       <label id="label-family">Qual sua família?</label>
-        <div id="familia">
-            <input type="radio" name ='family' value="Frontend">Frontend
-            <input type="radio" name ='family' value="Backend">Backend
-            <input type="radio" name ='family' value="FullStack">FullStack
-        </div>
+      <div id="familia">
+          <input type="radio" name ='family' value="Frontend">Frontend
+          <input type="radio" name ='family' value="Backend">Backend
+          <input type="radio" name ='family' value="FullStack">FullStack
+      </div>
       <label id="label-content">Qual conteúdo você está com mais vontade de aprender?</label>
       <input type="checkbox" class="subject" value="HoFs">HoFs
       <input type="checkbox" class="subject" value="Jest">Jest
@@ -45,6 +45,21 @@
       <input type="checkbox" class="subject" value="React">React
       <input type="checkbox" class="subject" value="SQL">SQL
       <input type="checkbox" class="subject" value="Python">Python
+
+      <div class="nota">
+        <label id="label-rate">Como você avalia a Trybewarts?</label>
+        <input type="radio" name ='rate' value="1">1
+        <input type="radio" name ='rate' value="2">2
+        <input type="radio" name ='rate' value="3">3
+        <input type="radio" name ='rate' value="4">4
+        <input type="radio" name ='rate' value="5">5
+        <input type="radio" name ='rate' value="6">6
+        <input type="radio" name ='rate' value="7">7
+        <input type="radio" name ='rate' value="8">8
+        <input type="radio" name ='rate' value="9">9
+        <input type="radio" name ='rate' value="10">10
+      </div>
+
     </form>
     <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="trybewarts colored">
   </main>
