--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
         <input type="radio" name ='rate' value="10">10
       </div>
 
+      <label class="textarea">Deixe seu comentário:</label>
+      <textarea maxlength="500"></textarea>
+      <div id="terms">
+        <label id="label-infos">Você concorda com o uso das informações acima?</label>
+        <input type="checkbox" id="agreement" required>
+      </div>
+      <button id="submit-btn" type="submit">Enviar</button>
     </form>
     <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="trybewarts colored">
   </main>
